[package]
name = "debug_macros"
version = "0.0.1"
authors = [ "Boris Faure <billiob@gmail.com>" ]
license = "BSD-2-Clause"
license-file = "COPYING"
readme = "README.md"
repository = "https://github.com/billiob/debug_macros.rs/"
description = "A simple set of macros to help debugging."


[lib]
name = "debug_macros"
path = "src/lib.rs"
